[gd_scene load_steps=10 format=3 uid="uid://cu8un60nckv1a"]

[ext_resource type="Script" path="res://Script/menu_principal.gd" id="1_odear"]
[ext_resource type="Texture2D" uid="uid://cyo5oikndmglh" path="res://Assets/MainPageMenu.png" id="2_cgov5"]
[ext_resource type="Texture2D" uid="uid://bsiuxgv8pd4t2" path="res://Assets/Frame 1.png" id="4_a0lwa"]
[ext_resource type="Texture2D" uid="uid://1on3i1mg56uo" path="res://Assets/Frame 2.png" id="4_ih4n1"]
[ext_resource type="Texture2D" uid="uid://bp83cholral40" path="res://Assets/Frame 3.png" id="5_4xsgp"]
[ext_resource type="Texture2D" uid="uid://cs5jcrn0p6p5l" path="res://Assets/pixelcut-export (2) 1.png" id="5_gitei"]
[ext_resource type="Texture2D" uid="uid://dm3gveg56lc6e" path="res://Assets/Frame 4.png" id="6_x73pw"]
[ext_resource type="Texture2D" uid="uid://cnbb8qfvfcpqb" path="res://Assets/Frame 5.png" id="7_dk7do"]

[sub_resource type="LabelSettings" id="LabelSettings_m767v"]
font_size = 50

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_odear")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cgov5")
expand_mode = 5

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -959.0
offset_right = 960.0
offset_bottom = 69.0
grow_horizontal = 2
text = "Menu Principal
"
label_settings = SubResource("LabelSettings_m767v")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -193.0
offset_top = -317.0
offset_right = 193.0
offset_bottom = -143.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
icon = ExtResource("4_a0lwa")

[node name="Join" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
icon = ExtResource("4_ih4n1")

[node name="Rule" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
icon = ExtResource("5_4xsgp")

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
icon = ExtResource("6_x73pw")

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
icon = ExtResource("7_dk7do")

[node name="Pixelcut-export(2)1" type="Sprite2D" parent="."]
position = Vector2(965, 152)
texture = ExtResource("5_gitei")

[connection signal="button_down" from="VBoxContainer/Play" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="VBoxContainer/Join" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="VBoxContainer/Rule" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="VBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_button_down"]
